# notebooks

./: .gitignore  README.md  cluster-basic.yaml  cluster-gpu.yaml
.github/actions/build-notebooks/: action.yaml
.github/actions/package-container/: action.yaml
.github/workflows/: cd.yaml  ci.yaml
basic/cluster/infrastructure/: kustomization.yaml
basic/cluster/infrastructure/kubox/: notebook.yaml
basic/code/: Dockerfile  GettingStarted.ipynb  Nyc-Taxi.ipynb  pyproject.toml  requirements.txt
basic/data/fhvhv_sample.parquet/: a9a2fa6a-093d-483e-a7cf-0ffec18a98d5-0.parquet
basic/data/green_sample.parquet/: 9488707f-3cf2-433a-81af-0b68bf256fe8-0.parquet
basic/data/yellow_sample.parquet/: 76c549c3-c21b-474f-8831-e111d5092396-0.parquet
gpu/cluster/infrastructure/: kustomization.yaml
gpu/cluster/infrastructure/core/: namespaces.yaml
gpu/cluster/infrastructure/kubox/: kustomization.yaml  notebook.yaml
gpu/code/: Dockerfile  PyTorch.ipynb  pyproject.toml  requirements.txt
